Refactored logging to not rely on static access and a global context.